edit file in new tab in kitty

--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -85,7 +85,9 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+# mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+# open the file in vim in a new tab
+mime ^text,  label editor = kitty @ new-window --new-tab ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
