--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -437,6 +437,7 @@ map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
+map gf open_with filemanager
 
 # External Programs
 map E  edit
