--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -256,3 +256,5 @@ label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" 
 
 # The very last action, so that it's never triggered accidentally, is to execute a program:
 mime application/x-executable = "$1"
+
+label filemanager, has xdg-open, flag f = xdg-open $1/../
