--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      monospace
+font_family      Ubuntu Mono for Powerline
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -22,7 +22,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 11.0
+font_size 13.0
 
 #: Font size (in pts)
 
@@ -462,7 +462,7 @@ color15 #ffffff
 
 #: Advanced {{{
 
-shell .
+shell /usr/bin/zsh
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
