--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -270,7 +270,7 @@ set line_numbers relative
 
 # When line_numbers=relative show the absolute line number in the
 # current line.
-set relative_current_zero true
+set relative_current_zero false
 
 # Start line numbers from 1 instead of 0
 set one_indexed false
@@ -335,6 +335,7 @@ map <C-l> redraw_window
 map <C-c> abort
 map <esc> change_mode normal
 map ~ set viewmode!
+map <C-o> open_with other_filemanager% -- ./
 
 map i display_file
 map ? help
@@ -437,7 +438,6 @@ map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
-map gf open_with filemanager
 
 # External Programs
 map E  edit
@@ -651,6 +651,9 @@ copycmap <end>       <C-e>
 copycmap <delete>    <C-d>
 copycmap <backspace> <C-h>
 
+# Open current directory in other filemanager
+map <C-o> shell $filemanager dir
+
 # Note: There are multiple ways to express backspaces.  <backspace> (code 263)
 # and <backspace2> (code 127).  To be sure, use both.
 copycmap <backspace> <backspace2>
@@ -725,3 +728,6 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+# Kitty terminal new tab here
+map T open_with kitty_new_tab_here
