--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -85,9 +85,9 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-# mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 # open the file in vim in a new tab
-mime ^text,  label editor = kitty @ new-window --new-tab ${VISUAL:-$EDITOR} -- "$@"
+# mime ^text,  label editor = kitty @ new-window --new-tab ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
@@ -256,5 +256,9 @@ label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" 
 
 # The very last action, so that it's never triggered accidentally, is to execute a program:
 mime application/x-executable = "$1"
+has xdg-open, flag f = xdg-open "$@"
 
-label filemanager, has xdg-open, flag f = xdg-open $1/../
+# mime ^inode/directory, has xdg-open = xdg-open -- "$@"
+# label other_fm, has xdg-open, flag f = xdg-open "$@"
+# label open, has open, flag f =open "$@"
+label kitty_new_tab_here, has kitty, flag f = kitty @ new-window --new-tab --cwd "$1/../"
