--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -440,7 +440,7 @@ map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
-map gD cd /home/sufiyan/Downloads
+map gD cd ~/Downloads
 
 # External Programs
 map E  edit
