--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "home/vim/bundle/vim-searchant"]
 	path = home/vim/bundle/vim-searchant
 	url = https://github.com/timakro/vim-searchant.git
-[submodule "home/vim/pathogen-src"]
-	path = home/vim/pathogen-src
-	url = https://github.com/tpope/vim-pathogen.git
+[submodule "home/vim/bundle/Vundle.vim"]
+	path = home/vim/bundle/Vundle.vim
+	url = https://github.com/VundleVim/Vundle.vim.git
