--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -441,6 +441,7 @@ map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
 map gD cd ~/Downloads
+map gb cd ~/Dropbox/beans
 
 # External Programs
 map E  edit
