Chage kitty theme and add ranger icons

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -916,4 +916,4 @@ map kitty_mod+delete clear_terminal reset active
 #: }}}
 
 # }}}
-include gruvbox_dark.conf
+include kitty-themes/themes/Monokai_Pro_(Filter_Octagon).conf
