--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "home/vim/bundle/Vundle.vim"]
 	path = home/vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "config/ranger/plugins/ranger_devicons"]
+	path = config/ranger/plugins/ranger_devicons
+	url = https://github.com/alexanderjeurissen/ranger_devicons
+[submodule "config/kitty/kitty-themes"]
+	path = config/kitty/kitty-themes
+	url = git@github.com:dexpota/kitty-themes.git
