exit ranger drag and drop dragon on completion

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -451,7 +451,7 @@ map yp yank path
 map yd yank dir
 map yn yank name
 map y. yank name_without_extension
-map <C-d> shell dragon -a -x %p
+map <C-d> shell dragon -a -x %p --and-exit&
 
 # Filesystem Operations
 map =  chmod
@@ -738,3 +738,6 @@ copytmap <ESC> q Q w <C-c>
 
 # Kitty terminal new tab here
 # map T open_with kitty_new_tab_here
+
+# Set devicons as the default linemode
+default_linemode devicons
