Fix tmux config

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -64,10 +64,8 @@ set -g status-keys vi
 #set -g window-active-style 'fg=colour250,bg=black'
 
 #pane border
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border-style bg=colour235,fg=colour238
+set -g pane-active-border-style bg=colour236,fg=colour51
 #-------------------------------------------------------#
 
 
@@ -77,7 +75,7 @@ set -g pane-active-border-fg colour51
 # splitting panes
 #bind \ split-window -h
 #bind - split-window -v
-bind \ split-window -h -c '#{pane_current_path}'
+bind \\ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
 # open new panes in current path
@@ -137,9 +135,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 #Show reloaded message in bright white 
-set -g message-fg white
-set -g message-bg default
-set -g message-attr bright
+set -g message-style fg=white,bg=default,bright
 #-------------------------------------------------------#
 
 
@@ -159,9 +155,7 @@ set -g status-justify centre
 
 # set the color of the window list
 # The name of the pane
-setw -g window-status-fg colour75
-setw -g window-status-bg default 
-setw -g window-status-attr dim
+setw -g window-status-style fg=colour75,bg=default,dim
 #-------------------------------------------------------#
 
 
