Add mojibar service

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ home/vim/bundle/*
 __pycache__
 config/mpv/input.conf
 config/nvim/.netrwhist
+
+# Ignore temp files of service
+graphical.target.wants
