--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -451,7 +451,7 @@ map yp yank path
 map yd yank dir
 map yn yank name
 map y. yank name_without_extension
-map <C-d> shell dragon -a -x %p --and-exit&
+map <C-d> shell dragon -a -x %p --and-exit --on-top
 
 # Filesystem Operations
 map =  chmod
