--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Ubuntu Mono for Powerline
+font_family      Ubuntu Nerd Font Complete
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
