Remove YCM and some cleanup

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -462,7 +462,7 @@ color15 #ffffff
 
 #: Advanced {{{
 
-shell /usr/bin/zsh
+shell /bin/zsh
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
