add yazi and nvim config

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -451,7 +451,8 @@ map yp yank path
 map yd yank dir
 map yn yank name
 map y. yank name_without_extension
-map <C-d> shell dragon -a -x %p --and-exit --on-top
+# map <C-d> shell dragon -a -x %p --and-exit --on-top
+map <C-d> shell drag %p
 
 # Filesystem Operations
 map =  chmod
